# sandbox-tests

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  project.toml  pyproject.toml  swagger-coverage-config-sandbox-tests.json  telegram-notifier-config.ini
.github/workflows/: python.yml
checkers/: http_checkers.py
clients/: fixtures.py
clients/http/: fixtures.py
clients/http/account_service/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/http/account_service/api/: __init__.py  account_api.py
clients/http/account_service/models/: __init__.py  bb_parse_mode.py  change_email.py  change_password.py  color_schema.py  http_validation_error.py  info.py  info_bb_text.py  paging_settings.py  rating.py  reset_password.py  user.py  user_details.py  user_details_envelope.py  user_envelope.py  user_role.py  user_schema.py  user_settings.py  validation_error.py  validation_error_loc_inner.py
clients/http/auth_service/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/http/auth_service/api/: __init__.py  auth_api.py
clients/http/auth_service/models/: __init__.py  (+8 more)
clients/http/mail_service/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/http/register_service/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/http/users_service/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
config/: prod.yaml  stg.yaml  stg_container.yaml
tests/: conftest.py
tests/account/smoke/: test_account_change_email.py  test_account_change_password.py  test_account_reset_password.py  test_delete_account.py  test_delete_account_confirmation.py  test_get_account_info.py  test_patch_account_info.py
tests/auth/smoke/: test_auth_logout.py  test_auth_logout_all.py  test_post_auth_auth.py
tests/kafka/: a.py  test_kafka.py
tests/mail/smoke/: test_delete_mail_message_message_id.py  test_delete_mail_messages.py  test_get_mail_message_message_id.py  test_get_mail_messages.py  test_get_mail_search.py
tests/register/smoke/: test_post_user_register.py  test_put_user_activate.py
tests/users/smoke/: test_get_users_users.py  test_get_users_users_search.py
(+32 files in other folders)
